correccion en sugerencias
